--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
             </div>
             <nav>
                 <ul class="menu" id="mainMenu">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
 
                     <!-- Incit2026 -->
                     <li class="dropdown">
-                        <a href="#about">InCIT2026 <i class="fas fa-chevron-down"></i></a>
+                        <label>InCIT2026 <i class="fas fa-chevron-down"></i></label>
                         <ul class="dropdown-content">
-                            <li><a href="#keynote">Keynote Speakers</a></li>
-                            <li><a href="#committee">Committee</a></li>
-                            <li><a href="#misc">Misc</a></li>
+                            <li><a href="keynote.html">Keynote Speakers</a></li>
+                            <li><a href="committee.html">Committee</a></li>
+                            <li><a href="misc.html">Misc</a></li>
                         </ul>
                     </li>
 
                     <!-- Program -->
                     <li class="dropdown">
-                        <a href="#dates">Program <i class="fas fa-chevron-down"></i></a>
+                        <lable>Program <i class="fas fa-chevron-down"></i></lable>
                         <ul class="dropdown-content">
                             <li><a href="#proceedings">Proceedings</a></li>
                             <li><a href="#presentation">Presentation Guidelines</a></li>
@@ -66,7 +66,7 @@
 
                     <!-- Submission -->
                     <li class="dropdown">
-                        <a href="#tracks">Submission <i class="fas fa-chevron-down"></i></a>
+                        <label>Submission <i class="fas fa-chevron-down"></i></label>
                         <ul class="dropdown-content">
                             <li><a href="#guidelines">Submission Guidelines</a></li>
                             <li><a href="#camera">Camera-Ready Instructions</a></li>
@@ -76,7 +76,7 @@
 
                     <!-- Venue -->
                     <li class="dropdown">
-                        <a href="#committee">Venue <i class="fas fa-chevron-down"></i></a>
+                        <a href="">Venue <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-content">
                             <li><a href="#venue">Venue</a></li>
                             <li><a href="#hotels">Hotels</a></li>
