--- a/Proceedings.html
+++ b/Proceedings.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keynote Speakers - InCIT 2026</title>
+    <title>Proceedings - InCIT 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
@@ -97,63 +97,127 @@
     <section class="hero" id="home">
         <div class="container">
             <div class="hero-content">
-                <h2>Keynote Speakers</h2>
-                <p>Renowned experts sharing cutting-edge insights in Information Technology</p>
+                <h2>Conference Proceedings</h2>
+                <p>Access published research papers and conference materials</p>
             </div>
         </div>
     </section>
 
     <!-- Main Content -->
     <main class="main-content">
-        <!-- Coming Soon Section -->
-        <section id="keynote">
+        <!-- Proceedings Section -->
+        <section id="proceedings">
             <div class="container">
                 <div class="section-title">
-                    <h2>Keynote Speakers</h2>
+                    <h2>Conference Proceedings</h2>
                 </div>
+                
+                <div class="proceedings-info">
+                    <div class="info-card">
+                        <div class="info-icon">
+                            <i class="fas fa-book"></i>
+                        </div>
+                        <h3>IEEE Xplore Digital Library</h3>
+                        <p>All accepted and presented papers will be submitted for inclusion into the IEEE Xplore Digital Library, subject to meeting IEEE Xplore's scope and quality requirements.</p>
+                    </div>
+                    
+                    <div class="info-card">
+                        <div class="info-icon">
+                            <i class="fas fa-database"></i>
+                        </div>
+                        <h3>Indexing</h3>
+                        <p>Proceedings will be submitted for indexing in major scientific databases including Scopus, Web of Science, and other abstract and indexing databases.</p>
+                    </div>
+                </div>
+
+                <!-- Coming Soon Section -->
                 <div class="coming-soon-container">
                     <div class="coming-soon-content">
                         <div class="coming-soon-icon">
-                            <i class="fas fa-microphone-alt"></i>
+                            <i class="fas fa-file-alt"></i>
                         </div>
-                        <h3>Coming Soon</h3>
-                        <p>We are currently finalizing our lineup of distinguished keynote speakers for InCIT 2026.</p>
-                        <p>Stay tuned for announcements featuring world-renowned experts in Information Technology who will share their insights and vision for the future of our field.</p>
-                        <div class="countdown-info">
-                            <p>Speaker announcements will begin in early 2026</p>
+                        <h3>Proceedings Coming Soon</h3>
+                        <p>The InCIT 2026 conference proceedings are currently in preparation and will be available after the conference.</p>
+                        <p>All accepted papers that are presented at the conference will be published in the proceedings, which will be made accessible through IEEE Xplore Digital Library.</p>
+                        <div class="proceedings-timeline">
+                            <div class="timeline-item">
+                                <div class="timeline-date">October 15, 2026</div>
+                                <div class="timeline-content">Camera-ready paper submission deadline</div>
+                            </div>
+                            <div class="timeline-item">
+                                <div class="timeline-date">November 12-13, 2026</div>
+                                <div class="timeline-content">Conference presentation</div>
+                            </div>
+                            <div class="timeline-item">
+                                <div class="timeline-date">Q1 2027</div>
+                                <div class="timeline-content">Proceedings publication in IEEE Xplore</div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Previous Speakers Section -->
-                <div class="previous-speakers">
+                <!-- Previous Proceedings Section -->
+                <div class="previous-proceedings">
                     <div class="section-title">
-                        <h3>Previous Keynote Speakers</h3>
+                        <h3>Previous Conference Proceedings</h3>
                     </div>
-                    <div class="speakers-grid">
-                        <div class="speaker-card placeholder">
-                            <div class="speaker-avatar">
-                                <i class="fas fa-user-tie"></i>
+                    <div class="proceedings-grid">
+                        <div class="proceedings-card">
+                            <div class="proceedings-year">2024</div>
+                            <h4>InCIT 2024 Proceedings</h4>
+                            <p>Advances in Information Technology and Digital Innovation</p>
+                            <div class="proceedings-stats">
+                                <div class="stat">
+                                    <i class="fas fa-file"></i>
+                                    <span>128 Papers</span>
+                                </div>
+                                <div class="stat">
+                                    <i class="fas fa-download"></i>
+                                    <span>Available in IEEE Xplore</span>
+                                </div>
                             </div>
-                            <h4>Distinguished Researcher</h4>
-                            <p class="speaker-affiliation">Leading University</p>
-                            <p class="speaker-topic">Advanced Topics in AI and Machine Learning</p>
+                            <a href="#" class="proceedings-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                Access Proceedings
+                            </a>
                         </div>
-                        <div class="speaker-card placeholder">
-                            <div class="speaker-avatar">
-                                <i class="fas fa-user-tie"></i>
+                        <div class="proceedings-card">
+                            <div class="proceedings-year">2022</div>
+                            <h4>InCIT 2022 Proceedings</h4>
+                            <p>Emerging Technologies for Digital Transformation</p>
+                            <div class="proceedings-stats">
+                                <div class="stat">
+                                    <i class="fas fa-file"></i>
+                                    <span>95 Papers</span>
+                                </div>
+                                <div class="stat">
+                                    <i class="fas fa-download"></i>
+                                    <span>Available in IEEE Xplore</span>
+                                </div>
                             </div>
-                            <h4>Industry Expert</h4>
-                            <p class="speaker-affiliation">Global Tech Company</p>
-                            <p class="speaker-topic">Future of Cloud Computing and Distributed Systems</p>
+                            <a href="#" class="proceedings-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                Access Proceedings
+                            </a>
                         </div>
-                        <div class="speaker-card placeholder">
-                            <div class="speaker-avatar">
-                                <i class="fas fa-user-tie"></i>
+                        <div class="proceedings-card">
+                            <div class="proceedings-year">2020</div>
+                            <h4>InCIT 2020 Proceedings</h4>
+                            <p>Information Technology in the New Normal Era</p>
+                            <div class="proceedings-stats">
+                                <div class="stat">
+                                    <i class="fas fa-file"></i>
+                                    <span>78 Papers</span>
+                                </div>
+                                <div class="stat">
+                                    <i class="fas fa-download"></i>
+                                    <span>Available in IEEE Xplore</span>
+                                </div>
                             </div>
-                            <h4>Academic Leader</h4>
-                            <p class="speaker-affiliation">Prestigious Institution</p>
-                            <p class="speaker-topic">Innovations in Data Science and Analytics</p>
+                            <a href="#" class="proceedings-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                Access Proceedings
+                            </a>
                         </div>
                     </div>
                 </div>
