--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <li class="dropdown">
                         <lable>Program <i class="fas fa-chevron-down"></i></lable>
                         <ul class="dropdown-content">
-                            <li><a href="#proceedings">Proceedings</a></li>
-                            <li><a href="#presentation">Presentation Guidelines</a></li>
+                            <li><a href="proceedings.html">Proceedings</a></li>
+                            <li><a href="presentation.html">Presentation Guidelines</a></li>
 
                             <!-- Sub-dropdown -->
                             <li class="dropdown-sub">
