--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keynote Speakers - InCIT 2026</title>
+    <title>Presentation Guidelines - InCIT 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
@@ -97,8 +97,8 @@
     <section class="hero" id="home">
         <div class="container">
             <div class="hero-content">
-                <h2>Keynote Speakers</h2>
-                <p>Renowned experts sharing cutting-edge insights in Information Technology</p>
+                <h2>Presentation Guidelines</h2>
+                <p>Essential information for presenters at InCIT 2026</p>
             </div>
         </div>
     </section>
@@ -106,54 +106,89 @@
     <!-- Main Content -->
     <main class="main-content">
         <!-- Coming Soon Section -->
-        <section id="keynote">
+        <section id="presentation-guidelines">
             <div class="container">
                 <div class="section-title">
-                    <h2>Keynote Speakers</h2>
+                    <h2>Presentation Guidelines</h2>
                 </div>
                 <div class="coming-soon-container">
                     <div class="coming-soon-content">
                         <div class="coming-soon-icon">
-                            <i class="fas fa-microphone-alt"></i>
+                            <i class="fas fa-desktop"></i>
                         </div>
                         <h3>Coming Soon</h3>
-                        <p>We are currently finalizing our lineup of distinguished keynote speakers for InCIT 2026.</p>
-                        <p>Stay tuned for announcements featuring world-renowned experts in Information Technology who will share their insights and vision for the future of our field.</p>
+                        <p>We are currently preparing comprehensive presentation guidelines for InCIT 2026.</p>
+                        <p>Detailed instructions for both onsite and online presentations will be available here, including technical requirements, time allocations, and best practices for effective presentations.</p>
                         <div class="countdown-info">
-                            <p>Speaker announcements will begin in early 2026</p>
+                            <p>Presentation guidelines will be published in September 2026</p>
                         </div>
                     </div>
                 </div>
 
-                <!-- Previous Speakers Section -->
-                <div class="previous-speakers">
-                    <div class="section-title">
-                        <h3>Previous Keynote Speakers</h3>
+                <!-- General Information Section -->
+                <div class="info-sections">
+                    <div class="info-grid">
+                        <div class="info-card">
+                            <div class="info-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <h4>Onsite Presentations</h4>
+                            <p>Information about in-person presentation requirements, equipment provided, and session formats.</p>
+                            <ul class="info-list">
+                                <li>Presentation duration</li>
+                                <li>Technical equipment</li>
+                                <li>Session chair guidelines</li>
+                                <li>Q&A procedures</li>
+                            </ul>
+                        </div>
+
+                        <div class="info-card">
+                            <div class="info-icon">
+                                <i class="fas fa-laptop"></i>
+                            </div>
+                            <h4>Online Presentations</h4>
+                            <p>Guidelines for virtual presenters including platform requirements and technical specifications.</p>
+                            <ul class="info-list">
+                                <li>Platform requirements</li>
+                                <li>Technical specifications</li>
+                                <li>Recording guidelines</li>
+                                <li>Virtual Q&A sessions</li>
+                            </ul>
+                        </div>
+
+                        <div class="info-card">
+                            <div class="info-icon">
+                                <i class="fas fa-file-powerpoint"></i>
+                            </div>
+                            <h4>Presentation Templates</h4>
+                            <p>Official templates and formatting guidelines for your presentation slides.</p>
+                            <ul class="info-list">
+                                <li>Slide templates</li>
+                                <li>Formatting guidelines</li>
+                                <li>Branding requirements</li>
+                                <li>Accessibility standards</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="speakers-grid">
-                        <div class="speaker-card placeholder">
-                            <div class="speaker-avatar">
-                                <i class="fas fa-user-tie"></i>
-                            </div>
-                            <h4>Distinguished Researcher</h4>
-                            <p class="speaker-affiliation">Leading University</p>
-                            <p class="speaker-topic">Advanced Topics in AI and Machine Learning</p>
+                </div>
+
+                <!-- Important Dates Reminder -->
+                <div class="dates-reminder">
+                    <div class="section-title">
+                        <h3>Important Dates for Presenters</h3>
+                    </div>
+                    <div class="dates-mini">
+                        <div class="date-mini-card">
+                            <div class="date-mini-title">Camera Ready</div>
+                            <div class="date-mini-date">October 15, 2026</div>
                         </div>
-                        <div class="speaker-card placeholder">
-                            <div class="speaker-avatar">
-                                <i class="fas fa-user-tie"></i>
-                            </div>
-                            <h4>Industry Expert</h4>
-                            <p class="speaker-affiliation">Global Tech Company</p>
-                            <p class="speaker-topic">Future of Cloud Computing and Distributed Systems</p>
+                        <div class="date-mini-card">
+                            <div class="date-mini-title">Registration</div>
+                            <div class="date-mini-date">October 30, 2026</div>
                         </div>
-                        <div class="speaker-card placeholder">
-                            <div class="speaker-avatar">
-                                <i class="fas fa-user-tie"></i>
-                            </div>
-                            <h4>Academic Leader</h4>
-                            <p class="speaker-affiliation">Prestigious Institution</p>
-                            <p class="speaker-topic">Innovations in Data Science and Analytics</p>
+                        <div class="date-mini-card">
+                            <div class="date-mini-title">Conference</div>
+                            <div class="date-mini-date">November 12-13, 2026</div>
                         </div>
                     </div>
                 </div>
