--- a/misc.html
+++ b/misc.html
@@ -50,8 +50,8 @@
                     <li class="dropdown">
                         <a href="">Program <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-content">
-                            <li><a href="index.html#proceedings">Proceedings</a></li>
-                            <li><a href="index.html#presentation">Presentation Guidelines</a></li>
+                            <li><a href="proceedings.html">Proceedings</a></li>
+                            <li><a href="presentation.html">Presentation Guidelines</a></li>
 
                             <!-- Sub-dropdown -->
                             <li class="dropdown-sub">
